--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <!-- Common Tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wedding Invitation: Manahil and Khizar</title>
+    <title>Birthday: Ayzel's Onederland</title>
 
     <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Wedding Invitation: Manahil and Khizar">
+    <meta name="apple-mobile-web-app-title" content="Birthday: Ayzel's Onederland">
     <meta name="theme-color" content="#111111">
     <meta name="color-scheme" content="dark">
 
@@ -75,23 +75,23 @@
         <section class="container" id="home">
 
             <div class="text-center pt-4">				
-                <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Welcome to the Wedding Ceremony of</h1>
+                <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Don't Be Late For A<br>Very Important Date In</h1>
                 <div class="py-1">
                     <div class="img-crop border border-3 border-light shadow mx-auto">
                         <img src="./assets/images/bg.png" alt="bg" onclick="util.modal(this)">
                     </div>
                 </div>
-                <h1 class="font-esthetic my-4" style="font-size: 3rem;">Manahil & Khizar</h1>
+                <h1 class="font-esthetic my-4" style="font-size: 3rem;">Ayzel's<br>Onedarland</h1>
                 <p class="mb-0" style="font-size: 1.5rem;">Sunday, 18th Feburary 2024</p>
 			    <add-to-calendar-button 
 					  class="btn btn-sm shadow "
-					  name="Wedding: Manahil And Khizar"
-					  startDate="2024-02-18"
-					  startTime="18:00"
-					  endDate="2024-02-18"
-					  endTime="22:00"
-					  timeZone="Asia/Karachi"
-					  location="https://maps.app.goo.gl/oFqu2wX7fdCPUcwM8"
+					  name="Birthday: Ayzel's Onederland"
+					  startDate="2024-08-10"
+					  startTime="20:00"
+					  endDate="2024-08-10"
+					  endTime="23:00"
+					  timeZone="America/Toronto"
+					  location="https://maps.app.goo.gl/zXyfyKhj1xquaY6aA"
 					  options="'Apple','Google','Outlook.com'"
 					  listStyle="dropdown"
 					  buttonStyle="3d"
@@ -122,28 +122,13 @@
 				<p class="pb-3 px-3">
                    ("In the name of Allah, the Most Gracious, the Most Merciful")
                 </p>               
-                <p class="pb-3 px-3">
-                   Requesting the honour of your presence at the Wedding Reception of
-                </p>
-
                 <div class="overflow-x-hidden">
-
-                    <div data-aos="fade-right" data-aos-duration="2000">                      
-						<div class="img-crop border border-3 border-light shadow my-4 mx-auto">
-                            <img src="./assets/images/cewe.png" alt="cewe" onclick="util.modal(this)">
-                        </div>
-                        <h1 class="font-esthetic" style="font-size: 3rem;">Manahil Rashid</h1>
-                        <p class="mt-2 mb-0" style="font-size: 1.25rem;">Daughter of</p>
-                        <p class="mb-0">Mr. &amp; Mrs. Rashid Mirza</p>
+                    <div data-aos="fade-right" data-aos-duration="2000">				
+                        <h1 class="font-esthetic" style="font-size: 3rem;">Mr. Taha &amp; Ms. Sumaiya</h1>  
+			<p class="mt-2 mb-0" style="font-size: 1.25rem;">Requesting the honour of your presence<br>to celebrate their daughter's 1st Birthday at the</p>
                     </div>
-                    <h1 class="font-esthetic my-4" style="font-size: 4rem;">&amp;</h1>
                     <div data-aos="fade-left" data-aos-duration="2000">
-                         <div class="img-crop border border-3 border-light shadow my-4 mx-auto">
-                            <img src="./assets/images/cowo.png" alt="cowo" onclick="util.modal(this)">
-                        </div>
-                        <h1 class="font-esthetic" style="font-size: 3rem;">Khizar Hussain</h1>
-                        <p class="mt-2 mb-0" style="font-size: 1.25rem;">Son of</p>
-                        <p class="mb-0">Mr. &amp; Mrs. Syed Asrar Hussain</p>
+                        <h1 class="font-esthetic" style="font-size: 3rem;">Ayzel's<br>Onederland</h1>                        
                     </div>
                 </div>
             </div>
@@ -152,26 +137,7 @@
         <!-- Wave Separator -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#111111" fill-opacity="1" d="M0,192L40,181.3C80,171,160,149,240,149.3C320,149,400,171,480,165.3C560,160,640,128,720,128C800,128,880,160,960,186.7C1040,213,1120,235,1200,218.7C1280,203,1360,149,1400,122.7L1440,96L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path>
-        </svg>
-
-        <!-- Firman Allah Subhanahu Wa Ta'ala -->
-        <div class="container">
-            <div class="text-center" data-aos="fade-up" data-aos-duration="2000">
-                <h1 class="font-esthetic mt-0 mb-3" style="font-size: 2rem">
-                    Allah Subhanahu Wa Ta'ala said
-                </h1>
-                <p style="font-size: 0.9rem;" class="px-2">
-                    And one of His signs is that He created for you spouses from among yourselves so that you may find comfort in them. And He has placed between you compassion and mercy. Surely in this are signs for people who reflect.
-                </p>
-                <span class="mb-0"><strong>Surah Ar-Rum Ayat 21</strong></span>
-            </div>
-        </div>
-
-        <!-- Wave Separator -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#111111" fill-opacity="1" d="M0,96L30,106.7C60,117,120,139,180,154.7C240,171,300,181,360,186.7C420,192,480,192,540,181.3C600,171,660,149,720,154.7C780,160,840,192,900,208C960,224,1020,224,1080,208C1140,192,1200,160,1260,138.7C1320,117,1380,107,1410,101.3L1440,96L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
-        </svg>
-
+        </svg>       
         <!-- time & Location -->
         <section class="dark-section" id="timelocation">
 
@@ -180,7 +146,7 @@
 
                     <h1 class="font-esthetic py-3" style="font-size: 2rem;">Time & Location</h1>
                     <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
-                        <div class="row justify-content-center" data-date="2024-02-18 06:00:00" id="date">
+                        <div class="row justify-content-center" data-date="2024-08-10 08:00:00" id="date">
                             <div class="col-3 p-1">
                                 <h2 class="d-inline m-0 p-0" id="day">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Day</small>
                             </div>
@@ -197,37 +163,31 @@
                     </div>
 
                     <p style="font-size: 0.9rem;" class="mt-4 py-2">
-                        By asking for the grace and blessing of Allah Subhanahu Wa Ta'ala, we will awaiting for you for the wedding ceremony programme In Sha Allah
+                        By asking for the grace and blessing of Allah Subhanahu Wa Ta'ala, we will awaiting for you for the birthday ceremony programme In Sha Allah
                     </p>
-					<p class="mb-4" style="font-size: 1.5rem;" data-aos="fade-right" data-aos-duration="1000">Sunday, 18th Feburary 2024</p>
+		    <p class="mb-4" style="font-size: 1.5rem;" data-aos="fade-right" data-aos-duration="1000">Saturday, 10th August 2024</p>
                     <div class="overflow-x-hidden">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-md-6">
 								<div class="py-2" data-aos="fade-left" data-aos-duration="1000">
-									<h1 class="font-esthetic" style="font-size: 2rem;">Reception</h1>
-									<p>6:00 p.m.</p>
+									<h1 class="font-esthetic" style="font-size: 2rem;">Gathering</h1>
+									<p>08:00 p.m.</p>
 								</div>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-6">
 								<div class="py-2" data-aos="fade-left" data-aos-duration="1500">
 									<h1 class="font-esthetic" style="font-size: 2rem;">Dinner</h1>
-									<p>7:00 p.m.</p>
+									<p>10:00 p.m.</p>
 								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="py-2" data-aos="fade-left" data-aos-duration="2000">
-									<h1 class="font-esthetic" style="font-size: 2rem;">Rukhsati</h1>
-									<p>9:00 p.m.</p>
-								</div>
-							</div>
+							</div>							
 						</div>                      
                     </div>
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">						
-                        <a href="https://www.google.com/maps/place/Shalimar+Tower+Hotel/@31.53387,74.3419831,15.75z/data=!4m21!1m11!3m10!1s0x391904eedd983479:0xefbffcd630b6eebd!2sShalimar+Tower+Hotel!5m2!4m1!1i2!8m2!3d31.5340049!4d74.3434424!10e1!16s%2Fg%2F11xb9h5zl!3m8!1s0x391904eedd983479:0xefbffcd630b6eebd!5m2!4m1!1i2!8m2!3d31.5340049!4d74.3434424!16s%2Fg%2F11xb9h5zl?entry=ttu" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
+                        <a href="https://google.com/maps/place/Gore+Meadows+Community+Centre+%26+Library/@43.7942947,-79.6977412,16.25z/data=!4m6!3m5!1s0x882b22d8820132e1:0xeb80cc4f1448cb7a!8m2!3d43.794266!4d-79.6947596!16s%2Fg%2F12hl68hvy?entry=ttu" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
                             <i class="fa-solid fa-map-location-dot me-2"></i>Look Google Maps
                         </a>
                         <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 1.1rem;">
-                            HOTEL SHALIMAR TOWER<br>2-A Main Gulberg Jail Road, Opp. to Chughtai Lab
+                            Community Center Room 3<br>Gore Medows Community Center<br>10150 The Gore Rd, Brampton, ON, L6P 0A6
                         </p>
                     </div>
                 </div>				
@@ -241,23 +201,16 @@
             <div class="text-center">
 				<div class="overflow-x-hidden">
 					<div class="row">
+						<div class="col-md-4">					
+						</div>
 						<div class="col-md-4">
 							<div class="py-2 left-content" data-aos="fade-right" data-aos-duration="1500">
 								<h1 class="font-esthetic" style="font-size: 2rem;">R.S.V.P</h1>
-								<p>Mr. &amp; Mrs. Tahir Hussain</p>
-								<p>Mr. &amp; Mrs. Kashif Noor</p>
-								<p>Mr. &amp; Mrs. Athar Noor</p>
+								<p>Mr. Taha</p>
+								<p>Ms. Sumaiya</p>
 							</div>
 						</div>
-						<div class="col-md-4"></div>
 						<div class="col-md-4">
-							<div class="py-2 right-content" data-aos="fade-left" data-aos-duration="1500">
-								<h1 class="font-esthetic" style="font-size: 2rem;">Looking Forward</h1>
-								<p>Mr. &amp; Mrs. Shahid Mirza</p>
-								<p>Mr. &amp; Mrs. Zameer-ud-Din</p>
-								<p>Mrs. Ejaz-ud-Din</p>
-								<p>Mrs. Abid Mirza</p>								
-							</div>
 						</div>
 					</div>
 				</div>               
@@ -285,17 +238,9 @@
     <div class="loading-page" id="welcome" style="opacity: 1;">
         <div class="d-flex justify-content-center align-items-center" style="height: 100vh !important;">
             <div class="text-center">
-                <h1 class="font-arabic py-1 px-2" style="font-size: 2rem">وَخَلَقْنَاكُمْ أَزْوَاجًا</h1>
-				<p class="pb-3 px-3">
-                   ("And We Created You In Pairs")
-                </p>
-                <h1 class="font-esthetic mb-4" style="font-size: 2.5rem;">Welcome to the Wedding Ceremony Of</h1>
-
-                <div class="img-crop border border-3 border-light shadow mb-4 mx-auto">
-                    <img src="./assets/images/bg.png" alt="bg">
-                </div>
-
-                <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Manahil & Khizar</h1>
+                <h1 class="font-arabic py-1 px-2" style="font-size: 2rem">Don't Be Late For A<br>Very Important Date In</h1>	                
+                <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Ayzel's<br>Onedarland</h1>
+		<h1 class="font-esthetic mb-4" style="font-size: 1.5rem;">To Celebrate her 1st Birthday</h1>
                 <button type="button" class="btn btn-light shadow rounded-4 mt-4" onclick="util.openinvite(this)">
                     <i class="fa-solid fa-envelope-open me-2"></i>Open Invitation
                 </button>
