--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Don't Be Late For A<br>Very Important Date In</h1>
                 <div class="py-1">
                     <div class="img-crop border border-3 border-light shadow mx-auto">
-                        <img src="./assets/images/bg.png" alt="bg" onclick="util.modal(this)">
+                        <img src="./assets/images/1.jpg" alt="bg" onclick="util.modal(this)">
                     </div>
                 </div>
                 <h1 class="font-esthetic my-4" style="font-size: 3rem;">Ayzel's<br>Onedarland</h1>
