--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <h1 class="font-esthetic my-4" style="font-size: 3rem;">Ayzel's<br>Onedarland</h1>
-                <p class="mb-0" style="font-size: 1.5rem;">Sunday, 18th Feburary 2024</p>
+                <p class="mb-0" style="font-size: 1.5rem;">Saturday, 10th August 2024</p>
 			    <add-to-calendar-button 
 					  class="btn btn-sm shadow "
 					  name="Birthday: Ayzel's Onederland"
@@ -240,6 +240,9 @@
             <div class="text-center">
                 <h1 class="font-arabic py-1 px-2" style="font-size: 2rem">Don't Be Late For A<br>Very Important Date In</h1>	                
                 <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Ayzel's<br>Onedarland</h1>
+		<div class="img-crop border border-3 border-light shadow mb-4 mx-auto">
+                    <img src="./assets/images/1.jpg" alt="bg">
+                </div>
 		<h1 class="font-esthetic mb-4" style="font-size: 1.5rem;">To Celebrate her 1st Birthday</h1>
                 <button type="button" class="btn btn-light shadow rounded-4 mt-4" onclick="util.openinvite(this)">
                     <i class="fa-solid fa-envelope-open me-2"></i>Open Invitation
