--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <div class="loading-page" id="welcome" style="opacity: 1;">
         <div class="d-flex justify-content-center align-items-center" style="height: 100vh !important;">
             <div class="text-center">
-                <h1 class="font-arabic py-1 px-2" style="font-size: 2rem">Don't Be Late For A<br>Very Important Date In</h1>	                
+                <h1 class="font-esthetic py-1 px-2" style="font-size: 2rem">Don't Be Late For A<br>Very Important Date In</h1>	                
                 <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Ayzel's<br>Onedarland</h1>
 		<div class="img-crop border border-3 border-light shadow mb-4 mx-auto">
                     <img src="./assets/images/1.jpg" alt="bg">
